# apias

./: .gitignore  .pre-commit-config.yaml  API.md  CHANGELOG.md  CONTRIBUTING.md  PLAN_TUI_OVERHAUL.md  README.md  clean-files.sh  clean-git-history.sh  cliff.toml  pyproject.toml  release-config.yaml  setup.py
.github/: dependabot.yml
.github/workflows/: codeql-analysis.yml  publish-to-pypi.yml  python-package.yml
apias/: __init__.py  apias.py  batch_tui.py  config.py  dialog_manager.py  error_collector.py  error_handler.py  event_system.py  logger_interceptor.py  message_queue.py  mock_api.py  status_pipeline.py  terminal_utils.py  tui.py
config/: error_thresholds.yaml
docs/source/: installation.rst
scripts/: maintenance_chore.sh  release.sh  release_config.py
scripts/release-configs/: node-npm.yaml  python-uv.yaml
tests/: conftest.py  test_dialog_manager.py  test_dialog_manager_report_20251128_230000.md  test_event_system.py  test_event_system_report_20251128_223503.md  test_logger_interceptor.py  test_logger_interceptor_report_20251128_225107.md  test_status_pipeline.py  test_status_pipeline_report_20251128_224600.md
tests/unit/: test_api_document.py  test_async_openai.py  test_batch_tui.py  test_config.py  test_core.py  test_error_collector.py  test_error_collector_report_20251128_223505.md  test_error_handler.py  test_message_queue.py  test_retry.py  test_tui.py
