[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "apias"
version = "0.1.14"
description = "AI powered API documentation scraper and converter"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
    {name = "Emanuele Sabetta", email = "713559+Emasoft@users.noreply.github.com"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=4.9.0",
    "playwright>=1.39.0",
    "types-requests>=2.31.0",
    "types-beautifulsoup4>=4.12.0",
    "openai[aiohttp]>=2.8.1",
    "rich>=14.2.0",
    "defusedxml>=0.7.1",
    "pyyaml>=6.0.3",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-mock>=3.10",
    "pytest-asyncio>=0.21.0",
    "tox>=4.0",
]
dev = [
    "mypy>=1.0",
    "ruff>=0.1",
    "pre-commit>=3.3",
]
docs = [
    "sphinx>=7.0",
    "sphinx-rtd-theme>=1.3",
    "myst-parser>=2.0",
]

[project.urls]
Homepage = "https://github.com/Emasoft/apias"
Documentation = "https://github.com/Emasoft/apias/docs"
Repository = "https://github.com/Emasoft/apias.git"
Changelog = "https://github.com/Emasoft/apias/blob/main/CHANGELOG.md"

[project.scripts]
apias = "apias.apias:main"

[tool.setuptools]
packages = ["apias"]

[tool.setuptools_scm]
write_to = "apias/_version.py"
version_scheme = "release-branch-semver"
local_scheme = "no-local-version"
fallback_version = "0.1.1"
tag_regex = "^v(?P<version>[0-9]+\\.[0-9]+\\.[0-9]+)$"

# Black and isort replaced by ruff - see [tool.ruff] and [tool.ruff.format]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
strict_optional = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
# Allow mypy to find packages in the virtual environment
namespace_packages = true
explicit_package_bases = true

# Per-module options for libraries with inline types but mypy doesn't find them
[[tool.mypy.overrides]]
module = ["playwright", "playwright.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["bs4", "bs4.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["requests", "requests.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["openai", "openai.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["rich", "rich.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["defusedxml", "defusedxml.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["pytest", "pytest.*", "_pytest", "_pytest.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --cov=apias --cov-report=term-missing"
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow (skip with: -m 'not slow')",
    "mock_api: tests using mock API - no costs (run with: -m mock_api)",
    "real_api: tests using real OpenAI API - requires OPENAI_API_KEY (run with: -m real_api)",
]
asyncio_mode = "strict"

[tool.coverage.run]
branch = true
source = ["apias"]
omit = [
    "*/site-packages/*",
    "setup.py",
    "apias/apias.py"  # Exclude the CLI file
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "def main\\(\\):",
    "def start_.*:",
    "class Spinner:",
    "def web_scraper",
    "def fetch_sitemap",
    "def process_.*page",
    "def update_progress_file",
    "def display_scraping_summary",
    "def create_summary_box"
]
fail_under = 80

[tool.isort]
profile = "black"
line_length = 88
skip_gitignore = true
known_first_party = ["apias"]

[tool.ruff]
line-length = 88
target-version = "py39"
fix = true  # Enable autofix behavior

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
    "UP", # pyupgrade
]
ignore = [
    "E203",  # Whitespace before ':'
    "E402",  # Module level import not at top of file
    "E501",  # Line too long
    "E266",  # Too many leading '#' for block comment
    "W505",  # Doc line too long
    "F841",  # Local variable is assigned to but never used
    "F842",  # Local variable is assigned to but never referenced
    "F401",  # Imported but unused
    "W293",  # Blank line contains whitespace
    "I001",  # Import block is un-sorted or un-formatted
    "UP015", # Unnecessary open mode parameters
    "C901",  # Function is too complex
    "W291",  # Trailing whitespace
    "UP006", # Use X instead of typing.X
    "UP035", # Use built-in type alias
    "B012"   # Return inside finally block
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/**/*" = ["S101"]
"apias/event_system.py" = ["B024"]  # ABC used for type hierarchy, not enforcement

[tool.ruff.format]
# Use black-compatible formatting
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true
docstring-code-line-length = "dynamic"

[dependency-groups]
dev = [
    "types-pyyaml>=6.0.12.20250915",
]

# uv configuration
[tool.uv]
# Publishing configuration
publish-url = "https://upload.pypi.org/legacy/"

# Index configuration for publishing
[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/legacy/"
publish-url = "https://test.pypi.org/legacy/"
